--- a/details.html
+++ b/details.html
@@ -11,12 +11,13 @@
     <header id="header"></header>
 
     <main>
-      <div class="container-custom py-12">
+      <div class="container-custom py-8 sm:py-12 px-4">
         <a
           href="/"
-          class="inline-flex items-center text-slate-500 hover:text-primary mb-8 transition-colors font-medium"
+          class="inline-flex items-center text-slate-500 hover:text-primary mb-6 sm:mb-8 transition-colors font-medium text-sm sm:text-base"
         >
-          ← Back to Listings
+          <span class="material-symbols-outlined text-lg mr-1">arrow_back</span>
+          Back to Listings
         </a>
 
         <div id="loader" class="text-center py-20">
@@ -28,12 +29,12 @@
         <div id="listing-container" class="hidden">
           <h1
             id="listing-title"
-            class="text-4xl text-primary font-primary font-semibold text-center mb-10 leading-tight"
+            class="text-3xl sm:text-4xl lg:text-5xl text-primary font-primary font-semibold text-center mb-6 sm:mb-10 leading-tight break-words"
           ></h1>
 
           <p
             id="listing-description"
-            class="text-lg text-gray-600 text-center max-w-3xl mx-auto mb-10 leading-relaxed"
+            class="text-base sm:text-lg text-gray-600 text-center max-w-3xl mx-auto mb-8 sm:mb-10 leading-relaxed px-2"
           ></p>
 
           <div
@@ -41,63 +42,71 @@
           >
             <div class="grid grid-cols-1 lg:grid-cols-2">
               <div
-                class="relative w-full h-[500px] bg-gray-100 flex items-center justify-center overflow-hidden"
+                class="relative w-full h-64 sm:h-96 lg:h-[500px] bg-gray-100 flex items-center justify-center overflow-hidden group"
               >
                 <img
                   id="listing-image"
                   src=""
                   alt="Listing Image"
-                  class="max-w-full max-h-full object-contain mix-blend-multiply"
+                  class="max-w-full max-h-full object-contain mix-blend-multiply transition-transform duration-500 group-hover:scale-105"
                 />
               </div>
 
               <div
-                class="p-8 sm:p-10 lg:p-14 border-t lg:border-t-0 lg:border-l border-gray-200"
+                class="p-6 sm:p-10 lg:p-14 border-t lg:border-t-0 lg:border-l border-gray-200"
               >
                 <div
-                  class="flex flex-col h-full justify-center space-y-8 lg:space-y-12"
+                  class="flex flex-col h-full justify-center space-y-6 sm:space-y-8 lg:space-y-12"
                 >
                   <div
-                    class="flex items-center justify-between py-5 border-b border-gray-200"
+                    class="flex items-center justify-between py-4 sm:py-5 border-b border-gray-200"
                   >
-                    <span class="text-2xl text-gray-700 font-semibold"
+                    <span
+                      class="text-lg sm:text-2xl text-gray-700 font-semibold"
                       >Seller</span
                     >
                     <span
                       id="listing-seller"
-                      class="text-xl text-gray-600"
+                      class="text-base sm:text-xl text-gray-600 truncate max-w-[150px] sm:max-w-none"
                     ></span>
                   </div>
 
                   <div
-                    class="flex items-center justify-between py-5 border-b border-gray-200"
+                    class="flex items-center justify-between py-4 sm:py-5 border-b border-gray-200"
                   >
-                    <span class="text-2xl text-gray-700 font-semibold"
+                    <span
+                      class="text-lg sm:text-2xl text-gray-700 font-semibold"
                       >Total bids</span
                     >
-                    <span id="listing-bids-count" class="text-2xl text-gray-600"
+                    <span
+                      id="listing-bids-count"
+                      class="text-xl sm:text-2xl text-gray-600"
                       >0</span
                     >
                   </div>
 
                   <div
-                    class="flex items-center justify-between py-5 border-b border-gray-200"
+                    class="flex items-center justify-between py-4 sm:py-5 border-b border-gray-200"
                   >
-                    <span class="text-2xl text-gray-700 font-semibold"
+                    <span
+                      class="text-lg sm:text-2xl text-gray-700 font-semibold"
                       >Highest bid</span
                     >
-                    <span id="listing-price" class="text-2xl text-gray-600"
+                    <span
+                      id="listing-price"
+                      class="text-xl sm:text-2xl text-gray-600 font-medium"
                       >0</span
                     >
                   </div>
 
-                  <div class="flex items-center justify-between py-5">
-                    <span class="text-2xl text-gray-700 font-sans font-semibold"
+                  <div class="flex items-center justify-between py-4 sm:py-5">
+                    <span
+                      class="text-lg sm:text-2xl text-gray-700 font-sans font-semibold"
                       >Ends at</span
                     >
                     <span
                       id="listing-ends"
-                      class="text-2xl text-gray-600 text-right"
+                      class="text-lg sm:text-2xl text-gray-600 text-right"
                     ></span>
                   </div>
                 </div>
@@ -106,59 +115,67 @@
           </div>
 
           <div
-            class="bg-white rounded-2xl shadow-lg p-8 sm:p-10 lg:p-14 mb-10 border border-slate-100"
+            class="bg-white rounded-2xl shadow-lg p-6 sm:p-10 lg:p-14 mb-10 border border-slate-100"
           >
             <h2
-              class="text-4xl text-primary font-primary font-semibold text-center mb-8"
+              class="text-2xl sm:text-3xl lg:text-4xl text-primary font-primary font-semibold text-center mb-6 sm:mb-8"
             >
               Bid History
             </h2>
 
             <div
               id="bids-container"
-              class="bg-gray-50 rounded-2xl p-6 sm:p-8 lg:p-12 space-y-6"
+              class="bg-gray-50 rounded-2xl p-4 sm:p-8 lg:p-12 space-y-4 sm:space-y-6"
             >
               <div class="text-center text-slate-500 italic">
                 No bids yet. Be the first!
               </div>
             </div>
           </div>
+
           <template id="bid-row-template">
             <div
-              class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3 p-4 bg-white rounded-xl shadow-sm border border-slate-100 transition-transform hover:scale-[1.02]"
+              class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2 sm:gap-3 p-4 bg-white rounded-xl shadow-sm border border-slate-100 transition-transform hover:scale-[1.01]"
             >
               <div
-                class="flex flex-col sm:flex-row sm:items-center gap-2 sm:gap-4"
+                class="flex items-center justify-between sm:justify-start gap-2 sm:gap-4 w-full sm:w-auto"
               >
                 <span
-                  class="js-bidder text-2xl text-gray-800 font-semibold"
+                  class="js-bidder text-lg sm:text-2xl text-gray-800 font-semibold truncate"
                 ></span>
-                <span class="js-date text-lg text-gray-600"></span>
+                <span
+                  class="js-date text-sm sm:text-lg text-gray-500 sm:text-gray-600"
+                ></span>
               </div>
 
-              <span class="js-amount text-xl text-primary font-medium"></span>
+              <span
+                class="js-amount text-lg sm:text-xl text-primary font-medium text-right sm:text-left"
+              ></span>
             </div>
           </template>
+
           <template id="bid-form-template">
-            <div class="max-w-lg mx-auto space-y-5 mt-10">
+            <div
+              class="max-w-lg mx-auto space-y-4 sm:space-y-5 mt-8 sm:mt-10 px-2 sm:px-0"
+            >
               <div
-                class="bg-gray-50 rounded-xl px-5 py-4 flex items-center justify-between border border-gray-200 focus-within:ring-2 focus-within:ring-secondary focus-within:border-secondary transition-all"
+                class="bg-gray-50 rounded-xl px-4 sm:px-5 py-3 sm:py-4 flex items-center justify-between border border-gray-200 focus-within:ring-2 focus-within:ring-secondary focus-within:border-secondary transition-all"
               >
                 <input
                   type="number"
                   id="bid-amount-input"
                   placeholder="Enter amount"
-                  class="bg-transparent outline-none flex-1 text-lg text-gray-700 font-sans placeholder:text-gray-400"
+                  class="bg-transparent outline-none flex-1 text-base sm:text-lg text-gray-700 font-sans placeholder:text-gray-400 w-full"
                   required
                 />
-                <span class="text-lg text-primary font-medium ml-3"
+                <span class="text-base sm:text-lg text-primary font-medium ml-3"
                   >credits</span
                 >
               </div>
 
               <button
                 id="place-bid-btn"
-                class="w-full bg-secondary text-white py-4 rounded-xl text-lg font-primary font-semibold hover:bg-hover transition-all transform hover:scale-[1.02] active:scale-95 shadow-md hover:shadow-lg disabled:opacity-50 disabled:cursor-not-allowed"
+                class="w-full bg-secondary text-white py-3 sm:py-4 rounded-xl text-lg font-primary font-semibold hover:bg-hover transition-all transform hover:scale-[1.02] active:scale-95 shadow-md hover:shadow-lg disabled:opacity-50 disabled:cursor-not-allowed"
               >
                 Place Bid
               </button>
