--- a/create-listing.html
+++ b/create-listing.html
@@ -11,16 +11,20 @@
     <header id="header"></header>
 
     <main>
-      <div class="flex-grow container-custom py-12">
-        <h1 class="text-4xl font-semibold text-primary mb-10 text-center">
+      <div class="flex-grow container-custom py-8 sm:py-12 px-4">
+        <h1
+          class="text-3xl sm:text-4xl font-semibold text-primary mb-8 sm:mb-10 text-center"
+        >
           Create New Listing
         </h1>
+
         <div
-          class="max-w-2xl mx-auto bg-white p-8 rounded-xl shadow-sm border border-slate-100"
+          class="max-w-2xl mx-auto bg-white p-4 sm:p-8 rounded-xl shadow-sm border border-slate-100"
         >
-          <form id="create-listing-form" class="flex flex-col gap-6">
+          <form id="create-listing-form" class="flex flex-col gap-5 sm:gap-6">
             <div>
-              <label class="block text-xl text-gray-700 font-semibold mb-3"
+              <label
+                class="block text-lg sm:text-xl text-gray-700 font-semibold mb-2 sm:mb-3"
                 >Title</label
               >
               <input
@@ -28,36 +32,39 @@
                 name="title"
                 required
                 placeholder="e.g. Vintage Camera"
-                class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none"
+                class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none text-base"
               />
             </div>
 
             <div>
-              <label class="block text-xl text-gray-700 font-semibold mb-3"
+              <label
+                class="block text-lg sm:text-xl text-gray-700 font-semibold mb-2 sm:mb-3"
                 >Description</label
               >
               <textarea
                 name="description"
                 rows="4"
                 placeholder="About the item..."
-                class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none resize-none"
+                class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none resize-none text-base"
               ></textarea>
             </div>
 
             <div>
-              <label class="block text-xl text-gray-700 font-semibold mb-3"
+              <label
+                class="block text-lg sm:text-xl text-gray-700 font-semibold mb-2 sm:mb-3"
                 >Tags</label
               >
               <input
                 type="text"
                 name="tags"
                 placeholder="electronics, vintage, sale (comma separated)"
-                class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none"
+                class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none text-base"
               />
             </div>
 
             <div>
-              <label class="block text-xl text-gray-700 font-semibold mb-3"
+              <label
+                class="block text-lg sm:text-xl text-gray-700 font-semibold mb-2 sm:mb-3"
                 >Image URL
               </label>
               <div class="space-y-3">
@@ -67,7 +74,7 @@
                   id="media-url-input"
                   required
                   placeholder="https://example.com/image.jpg"
-                  class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none"
+                  class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none text-base"
                 />
                 <div
                   id="image-preview"
@@ -79,7 +86,8 @@
             </div>
 
             <div>
-              <label class="block text-xl text-gray-700 font-semibold mb-3"
+              <label
+                class="block text-lg sm:text-xl text-gray-700 font-semibold mb-2 sm:mb-3"
                 >Auction Ends At</label
               >
               <input
@@ -87,19 +95,21 @@
                 name="endsAt"
                 id="ends-at-input"
                 required
-                class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none"
+                class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none text-base"
               />
             </div>
 
-            <div class="flex gap-4 mt-4">
+            <div
+              class="flex flex-col-reverse sm:flex-row gap-3 sm:gap-4 mt-4 sm:mt-6"
+            >
               <a
                 href="/"
-                class="px-6 py-3 text-slate-500 hover:text-slate-700 font-medium flex items-center justify-center"
+                class="w-full sm:w-auto px-6 py-3 sm:py-4 text-slate-500 hover:text-slate-700 font-medium flex items-center justify-center border border-slate-200 sm:border-transparent rounded-xl hover:bg-slate-50 sm:hover:bg-transparent transition-colors"
                 >Cancel</a
               >
               <button
                 type="submit"
-                class="flex-grow bg-green-600 hover:bg-green-700 text-white font-semibold px-8 py-4 text-lg rounded-xl shadow-md hover:shadow-lg hover:scale-[1.02] transition-all transform hover:scale-105 active:scale-95"
+                class="w-full sm:flex-grow bg-green-600 hover:bg-green-700 text-white font-semibold px-8 py-3 sm:py-4 text-lg rounded-xl shadow-md hover:shadow-lg transition-all transform hover:scale-[1.02] active:scale-95"
               >
                 Create Listing
               </button>
