--- a/edit-profile.html
+++ b/edit-profile.html
@@ -10,22 +10,27 @@
   <body class="bg-slate-50 flex flex-col min-h-screen">
     <header id="header"></header>
 
-    <main class="flex-grow container-custom py-12">
+    <main class="flex-grow container-custom py-8 sm:py-12 px-4">
       <div
-        class="max-w-xl mx-auto bg-white p-8 rounded-xl shadow-sm border border-slate-100"
+        class="max-w-xl mx-auto bg-white p-5 sm:p-8 rounded-xl shadow-sm border border-slate-100"
       >
-        <h1 class="text-2xl font-bold text-heading-color mb-6">Edit Profile</h1>
+        <h1
+          class="text-2xl sm:text-3xl font-bold text-heading-color mb-6 sm:mb-8 text-center sm:text-left"
+        >
+          Edit Profile
+        </h1>
 
-        <form id="edit-profile-form" class="flex flex-col gap-6">
+        <form id="edit-profile-form" class="flex flex-col gap-5 sm:gap-6">
           <div>
-            <label class="block text-sm font-medium text-slate-700 mb-2"
+            <label
+              class="block text-base sm:text-lg font-medium text-slate-700 mb-2"
               >Bio / About Me</label
             >
             <textarea
               name="bio"
               rows="4"
               placeholder="Tell people about yourself..."
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none resize-none"
+              class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none resize-none text-base"
             ></textarea>
             <p class="text-xs text-slate-400 mt-1 text-right">
               Max 160 characters recommended
@@ -33,38 +38,42 @@
           </div>
 
           <div>
-            <label class="block text-sm font-medium text-slate-700 mb-2"
+            <label
+              class="block text-base sm:text-lg font-medium text-slate-700 mb-2"
               >Avatar URL</label
             >
             <input
               type="url"
               name="avatar"
               placeholder="https://example.com/image.jpg"
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none"
+              class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none text-base"
             />
           </div>
 
           <div>
-            <label class="block text-sm font-medium text-slate-700 mb-2"
+            <label
+              class="block text-base sm:text-lg font-medium text-slate-700 mb-2"
               >Banner URL</label
             >
             <input
               type="url"
               name="banner"
               placeholder="https://example.com/banner.jpg"
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none"
+              class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none text-base"
             />
           </div>
 
-          <div class="flex gap-4 mt-2">
+          <div
+            class="flex flex-col-reverse sm:flex-row gap-3 sm:gap-4 mt-4 sm:mt-6"
+          >
             <a
               href="/profile.html"
-              class="px-6 py-2 text-slate-500 hover:text-slate-700 font-medium flex items-center"
+              class="w-full sm:w-auto px-6 py-3 sm:py-3 text-slate-500 hover:text-slate-700 font-medium flex items-center justify-center border border-slate-200 sm:border-transparent rounded-xl hover:bg-slate-50 sm:hover:bg-transparent transition-colors"
               >Cancel</a
             >
             <button
               type="submit"
-              class="flex-grow bg-secondary hover:bg-hover text-white font-bold py-3 rounded-xl transition-all shadow-sm hover:shadow-md"
+              class="w-full sm:flex-grow bg-secondary hover:bg-hover text-white font-bold py-3 sm:py-3 rounded-xl transition-all shadow-sm hover:shadow-md transform hover:scale-[1.02] active:scale-95"
             >
               Save Changes
             </button>
